migrate settings-screen

--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -9,7 +9,7 @@ import { Form, FormButton, FormField } from '../../../shared/components/form';
 import ForgotPasswordActions from './forgot-password.reducer';
 import styles from './forgot-password-screen.styles';
 
-function ForgotPasswordScreen(props){
+function ForgotPasswordScreen(props) {
   // setup error state for displaying error messages
   const [error, setError] = React.useState('');
 
@@ -37,11 +37,7 @@ function ForgotPasswordScreen(props){
     <KeyboardAwareScrollView contentContainerStyle={styles.container}>
       <View style={styles.formContainer}>
         <Text style={styles.errorText}>{error}</Text>
-        <Form
-          initialValues={{ email: '' }}
-          validationSchema={validationSchema}
-          onSubmit={onSubmit}
-          ref={formRef}>
+        <Form initialValues={{ email: '' }} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
           <FormField
             name="email"
             label="Email"
@@ -57,7 +53,6 @@ function ForgotPasswordScreen(props){
     </KeyboardAwareScrollView>
   );
 }
-
 
 const mapStateToProps = (state) => {
   return {
