--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -9,7 +9,7 @@ import * as Yup from 'yup';
 import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
 import { Form, FormButton, FormField } from '../../../shared/components/form';
 
-function ChangePasswordScreen (props) {
+function ChangePasswordScreen(props) {
   // setup error state for displaying error messages
   const [error, setError] = React.useState('');
 
@@ -86,7 +86,7 @@ function ChangePasswordScreen (props) {
             onSubmitEditing={() => formRef?.current?.submitForm()}
             textContentType="password"
           />
-          <FormButton title={'Register'} />
+          <FormButton title={'Change Password'} />
         </Form>
       </View>
     </KeyboardAwareScrollView>
