--- a/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
@@ -1,118 +1,95 @@
-import React from 'react'
-import { Text, TouchableHighlight } from 'react-native'
-import { connect } from 'react-redux'
-import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
+import React, { createRef } from 'react';
+import { Text, View } from 'react-native';
+import { connect } from 'react-redux';
+import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view';
+import * as Yup from 'yup';
 
-import AccountActions from '../../../shared/reducers/account.reducer'
-// Styles
-import styles from './settings-screen.styles'
+import AccountActions from '../../../shared/reducers/account.reducer';
+import styles from './settings-screen.styles';
+import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
+import { Form, FormButton, FormField } from '../../../shared/components/form';
 
-class SettingsScreen extends React.Component {
-  constructor (props) {
-    super(props)
-/*
-    this.state = {
-      accountModel: t.struct({
-        firstName: t.maybe(t.String),
-        lastName: t.maybe(t.String),
-        login: t.String,
-        email: t.maybe(t.String),
-        langKey: t.String,
-        activated: t.Boolean
-      }),
-      accountValue: this.props.account,
-      options: {
-        fields: {
-          firstName: {
-            returnKeyType: 'next',
-            testID: 'firstNameInput',
-            onSubmitEditing: () => this.form.getComponent('lastName').refs.input.focus()
-          },
-          lastName: {
-            returnKeyType: 'next',
-            testID: 'lastNameInput',
-            onSubmitEditing: () => this.form.getComponent('email').refs.input.focus()
-          },
-          login: {
-            hidden: true
-          },
-          email: {
-            returnKeyType: 'done',
-            testID: 'emailInput',
-            onSubmitEditing: () => this.submitUpdate()
-          },
-          langKey: {
-            hidden: true
-          },
-          activated: {
-            hidden: true
-          }
-        }
-      },
-    }
-*/
-    this.submitUpdate = this.submitUpdate.bind(this)
-    this.accountChange = this.accountChange.bind(this)
-  }
+function SettingsScreen(props) {
+  // setup error state for displaying error messages
+  const [error, setError] = React.useState('');
 
-  submitUpdate () {
-    // call getValue() to get the values of the form
-    const value = this.form.getValue()
-    if (value) { // if validation fails, value will be null
-      this.props.updateAccount(value)
-    }
-  }
+  // set up validation schema for the form
+  const validationSchema = Yup.object().shape({
+    email: Yup.string().required().email().label('Email'),
+  });
 
-  componentDidUpdate(prevProps) {
-    if (prevProps.updating && !this.props.updating) {
-      if (this.props.error) {
-        this.props.navigation.navigate('ModalScreen', { title: 'Error', message: this.props.error });
+  const onSubmit = (data) => props.updateAccount(data);
+
+  useDidUpdateEffect(() => {
+    if (!props.updating) {
+      if (props.error) {
+        setError(props.error);
       } else {
-        this.props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Settings updated' });
-        this.props.getAccount()
+        //       // Navigation.popToRoot(this.props.componentId)
+        props.getAccount();
+        props.navigation.navigate('ModalScreen', { title: 'Success', message: 'Settings updated' });
       }
     }
-  }
+  }, [props.updating]);
 
-  accountChange (newValue) {
-    this.setState({
-      accountValue: newValue
-    })
-  }
+  // create refs for handling onSubmit functionality
+  const formRef = createRef();
+  const firstNameRef = createRef();
+  const lastNameRef = createRef();
+  const emailRef = createRef();
 
-  render () {
-    return (
-      <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        {/*<Form*/}
-        {/*  ref={(c) => {*/}
-        {/*    this.form = c;*/}
-        {/*  }}*/}
-        {/*  type={this.state.accountModel}*/}
-        {/*  options={this.state.options}*/}
-        {/*  value={this.state.accountValue}*/}
-        {/*  onChange={this.accountChange}*/}
-        {/*/>*/}
-        <TouchableHighlight testID='settingsSubmitButton' style={styles.button} onPress={this.submitUpdate} underlayColor='#99d9f4'>
-          <Text style={styles.buttonText}>Save</Text>
-        </TouchableHighlight>
-      </KeyboardAwareScrollView>
-    )
-  }
+  return (
+    <KeyboardAwareScrollView contentContainerStyle={styles.container}>
+      <View style={styles.formContainer}>
+        <Text style={styles.errorText}>{error}</Text>
+        <Form initialValues={props.account} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
+          <FormField
+            name="firstName"
+            ref={firstNameRef}
+            label="First Name"
+            placeholder="Enter first name"
+            onSubmitEditing={() => lastNameRef?.current?.focus()}
+            autoCapitalize="none"
+            autoFocus={true}
+          />
+          <FormField
+            name="lastName"
+            ref={lastNameRef}
+            label="Last Name"
+            placeholder="Enter last name"
+            onSubmitEditing={() => emailRef?.current?.focus()}
+            autoCapitalize="none"
+          />
+          <FormField
+            name="email"
+            ref={emailRef}
+            label="Email"
+            placeholder="Enter email"
+            onSubmitEditing={() => formRef?.current?.submitForm()}
+            autoCapitalize="none"
+            keyboardType="email-address"
+            textContentType="username"
+          />
+          <FormButton title={'Save'} />
+        </Form>
+      </View>
+    </KeyboardAwareScrollView>
+  );
 }
 
 const mapStateToProps = (state) => {
   return {
     account: state.account.account,
     updating: state.account.updating,
-    error: state.account.error
-  }
-}
+    error: state.account.error,
+  };
+};
 
 const mapDispatchToProps = (dispatch) => {
   return {
     updateAccount: (account) => dispatch(AccountActions.accountUpdateRequest(account)),
-    getAccount: () => dispatch(AccountActions.accountRequest())
-  }
-}
+    getAccount: () => dispatch(AccountActions.accountRequest()),
+  };
+};
 
-export default connect(mapStateToProps, mapDispatchToProps)(SettingsScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(SettingsScreen);
