improve form support, add more input types (date, datetime, and list)

--- a/generators/app/templates/app/modules/login/login-screen.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.js.ejs
@@ -51,7 +51,7 @@ function LoginScreen(props) {
             placeholder="Enter login"
             onSubmitEditing={() => passwordRef?.current?.focus()}
             autoCapitalize="none"
-            keyboardType="login"
+            keyboardType="username"
             textContentType="username"
             autoFocus={true}
           />
