--- a/generators/app/templates/app/navigation/modal.screen.js.ejs
+++ b/generators/app/templates/app/navigation/modal.screen.js.ejs
@@ -1,5 +1,6 @@
 import * as React from 'react';
 import { Button, StyleSheet, Text, useWindowDimensions, View } from 'react-native';
+/* eslint-disable react-native/no-inline-styles */
 
 export function ModalScreen({ route, navigation }) {
   React.useEffect(() => {
