--- a/generators/app/templates/storybook/stories.js.ejs
+++ b/generators/app/templates/storybook/stories.js.ejs
@@ -1,3 +1,4 @@
+import '../app/shared/components/form/jhi-form-field.story';
 import '../app/shared/components/alert-message/alert-message.story.js'
 import '../app/shared/components/full-button/full-button.story.js'
 import '../app/shared/components/rounded-button/rounded-button.story.js'
