--- a/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
@@ -1,14 +1,27 @@
 import React from 'react';
 import { useFormikContext } from 'formik';
 
-import AppTextInput from './jhi-text-input';
-import AppSwitchInput from './jhi-switch-input';
+import AppTextInput from './inputs/jhi-text-input';
+import AppSwitchInput from './inputs/jhi-switch-input';
+import AppListInput from './inputs/jhi-list-input';
+import AppDateInput from './inputs/jhi-date-input';
 import { StyleSheet, Text } from 'react-native';
 import ApplicationStyles from '../../themes/application.styles';
+
+const styles = StyleSheet.create({
+  ...ApplicationStyles.screen,
+});
 
 export default React.forwardRef((props, ref) => {
   let { name, inputType, ...otherProps } = props;
   const { setFieldTouched, setFieldValue, values, errors, touched } = useFormikContext();
+
+  if (!inputType) {
+    inputType = 'text';
+  }
+  if (!['text', 'boolean', 'date', 'datetime', 'list'].includes(inputType)) {
+    return <Text style={styles.errorText}>INVALID INPUT TYPE '{inputType}'</Text>;
+  }
 
   const hasError = errors[name] && touched[name];
   return (
@@ -23,7 +36,7 @@ export default React.forwardRef((props, ref) => {
           {...otherProps}
         />
       )}
-      {inputType === 'switch' && (
+      {inputType === 'boolean' && (
         <AppSwitchInput
           ref={ref}
           value={values[name]}
@@ -33,11 +46,29 @@ export default React.forwardRef((props, ref) => {
           {...otherProps}
         />
       )}
+      {inputType === 'list' && (
+        <AppListInput
+          ref={ref}
+          value={values[name]}
+          onValueChange={(value) => setFieldValue(name, value)}
+          onBlur={() => setFieldTouched(name)}
+          error={hasError}
+          {...otherProps}
+        />
+      )}
+      {(inputType === 'date' || inputType === 'datetime') && (
+        <AppDateInput
+          ref={ref}
+          inputType={inputType}
+          value={values[name]}
+          selected={values[name]}
+          onChange={(value) => setFieldValue(name, value)}
+          onBlur={() => setFieldTouched(name)}
+          error={hasError}
+          {...otherProps}
+        />
+      )}
       {hasError && <Text style={styles.errorText}>{errors[name]}</Text>}
     </React.Fragment>
   );
-});
-
-const styles = StyleSheet.create({
-  ...ApplicationStyles.screen,
 });
