--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -47,6 +47,10 @@
     "react-native-web": "REPLACE_WITH_VERSION",
     "@expo/vector-icons": "REPLACE_WITH_VERSION",
     "formik": "REPLACE_WITH_VERSION",
+    "@react-native-community/datetimepicker": "REPLACE_WITH_VERSION",
+    "react-datepicker": "REPLACE_WITH_VERSION",
+    "react-native-modal-datetime-picker": "REPLACE_WITH_VERSION",
+    "react-native-picker-select": "REPLACE_WITH_VERSION",
     "yup": "REPLACE_WITH_VERSION"
   },
   "devDependencies": {
