--- a/generators/app/templates/app/modules/home/launch-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.js.ejs
@@ -1,54 +1,49 @@
-import React from 'react'
-import { ScrollView, Text, Image, View, Platform } from 'react-native'
+import React from 'react';
+import { ScrollView, Text, Image, View, Platform } from 'react-native';
 
-import LearnMoreLinks from './learn-more-links.component.js'
-import { Images } from '../../shared/themes'
-import styles from './launch-screen.styles'
+import LearnMoreLinks from './learn-more-links.component.js';
+import { Images } from '../../shared/themes';
+import styles from './launch-screen.styles';
 
-export default class LaunchScreen extends React.Component {
-  constructor (props) {
-    super(props)
-  }
-
-  render() {
-    return (
-      <View style={styles.mainContainer} testID="launchScreen">
-        <Image source={Images.background} style={styles.backgroundImage} resizeMode="stretch" />
-        <ScrollView contentInsetAdjustmentBehavior="automatic" style={styles.scrollView}>
-          <View style={styles.centered}>
-            <Image source={Images.logoJhipster} style={styles.logo} />
-            <Text style={styles.welcomeText}>{'Welcome to your JHipster React Native app.'}</Text>
+export default function LaunchScreen() {
+  return (
+    <View style={styles.mainContainer} testID="launchScreen">
+      <Image source={Images.background} style={styles.backgroundImage} resizeMode="stretch" />
+      <ScrollView contentInsetAdjustmentBehavior="automatic" style={styles.scrollView}>
+        <View style={styles.centered}>
+          <Image source={Images.logoJhipster} style={styles.logo} />
+          <Text style={styles.welcomeText}>{'Welcome to your JHipster React Native app.'}</Text>
+        </View>
+        <View style={styles.hairline} />
+        {/* <Header /> */}
+        {global.HermesInternal == null ? null : (
+          <View style={styles.engine}>
+            <Text style={styles.footer}>Engine: Hermes</Text>
           </View>
-          <View style={styles.hairline} />
-          {/* <Header /> */}
-          {global.HermesInternal == null ? null : (
-            <View style={styles.engine}>
-              <Text style={styles.footer}>Engine: Hermes</Text>
-            </View>
-          )}
-          <View style={styles.body}>
-            {Platform.OS !== 'android' ? null : (
-              <View style={styles.sectionContainer}>
-                <Text style={styles.sectionTitle}>Running on Android</Text>
-                <Text style={styles.sectionDescription}>
-                  Run <Text style={styles.highlight}>adb reverse tcp:8080 tcp:8080</Text> to be able to connect to your JHipster backend (Android only).
-                </Text>
-              </View>
-            )}
+        )}
+        <View style={styles.body}>
+          {Platform.OS !== 'android' ? null : (
             <View style={styles.sectionContainer}>
-              <Text style={styles.sectionTitle}>Make Some Changes</Text>
+              <Text style={styles.sectionTitle}>Running on Android</Text>
               <Text style={styles.sectionDescription}>
-                Edit <Text style={styles.highlight}>app/modules/home/launch-screen.js</Text> to
-                change this screen and then come back to see your edits.
+                Run <Text style={styles.highlight}>adb reverse tcp:8080 tcp:8080</Text> to be able to connect to your JHipster backend
+                (Android only).
               </Text>
             </View>
-            <View style={styles.sectionContainer}>
-              <Text style={styles.sectionTitle}>Learn More</Text>
-            </View>
-            <LearnMoreLinks />
+          )}
+          <View style={styles.sectionContainer}>
+            <Text style={styles.sectionTitle}>Make Some Changes</Text>
+            <Text style={styles.sectionDescription}>
+              Edit <Text style={styles.highlight}>app/modules/home/launch-screen.js</Text> to change this screen and then come back to see
+              your edits.
+            </Text>
           </View>
-        </ScrollView>
-      </View>
-    )
-  }
+          <View style={styles.sectionContainer}>
+            <Text style={styles.sectionTitle}>Learn More</Text>
+          </View>
+          <LearnMoreLinks />
+        </View>
+      </ScrollView>
+    </View>
+  );
 }
