--- a/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
+++ b/generators/app/templates/app/shared/components/form/inputs/jhi-date-input.web.js.ejs
@@ -2,19 +2,43 @@ import React from 'react';
 import { View, StyleSheet, TextInput, Text } from 'react-native';
 import DatePicker from 'react-datepicker';
 import 'react-datepicker/dist/react-datepicker.css';
+/* eslint-disable react-native/no-inline-styles */
 
 export default React.forwardRef((props, ref) => {
   const { label, labelStyle, error, inputType, ...otherProps } = props;
   const CustomInput = ({ value, onClick }) => (
     <TextInput ref={ref} style={[styles.input, { borderColor: error ? '#fc6d47' : '#c0cbd3' }]} value={value} onClick={onClick} />
   );
-  const extraProps = inputType === 'datetime' ? { showTimeSelect: true, timeFormat: 'p', dateFormat: 'Pp' } : {};
+  // show timepicker for datetime fields
+  const dateTimeProps = inputType === 'datetime' ? { showTimeSelect: true, timeFormat: 'p', dateFormat: 'Pp' } : {};
+  // these props prevent the popover from appearing below, when it appears below it appears behind other input fields
+  const popperProps = {
+    popperPlacement: 'top',
+    popperModifiers: {
+      flip: {
+        behavior: ['top'], // don't allow it to flip to be above
+      },
+      preventOverflow: {
+        enabled: false, // tell it not to try to stay within the view (this prevents the popper from covering the element you clicked)
+      },
+      hide: {
+        enabled: false, // turn off since needs preventOverflow to be enabled
+      },
+    },
+  };
 
   return (
     <View style={styles.container}>
       {/* if there's a label, render it */}
       {label && <Text style={[styles.label, labelStyle]}>{label}</Text>}
-      <DatePicker customInputRef={ref} customInput={<CustomInput />} {...extraProps} {...otherProps} />
+      <DatePicker
+        customInputRef={ref}
+        customInput={<CustomInput />}
+        popperPlacement="top"
+        {...popperProps}
+        {...dateTimeProps}
+        {...otherProps}
+      />
       {/* if there's an error, render it */}
       <Text style={styles.textError}>{error && error.message}</Text>
     </View>
