--- a/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form-field.js.ejs
@@ -19,7 +19,7 @@ export default React.forwardRef((props, ref) => {
   if (!inputType) {
     inputType = 'text';
   }
-  if (!['text', 'boolean', 'date', 'datetime', 'list'].includes(inputType)) {
+  if (!['text', 'boolean', 'number', 'date', 'datetime', 'list'].includes(inputType)) {
     return <Text style={styles.errorText}>INVALID INPUT TYPE '{inputType}'</Text>;
   }
 
@@ -31,6 +31,24 @@ export default React.forwardRef((props, ref) => {
           ref={ref}
           value={values[name]}
           onChangeText={(text) => setFieldValue(name, text)}
+          onBlur={() => setFieldTouched(name)}
+          error={hasError}
+          {...otherProps}
+        />
+      )}
+      {inputType === 'number' && (
+        <AppTextInput
+          ref={ref}
+          keyboardType="numeric"
+          value={values[name]}
+          onChangeText={(text) => {
+            const regex = /^-?(0|[1-9]\d*)?(\.\d+)?(?<=\d)$/;
+            if (text.length === 0 || regex.test(text.toString())) {
+              console.log(text);
+              setFieldValue(name, text);
+            }
+            console.log(text);
+          }}
           onBlur={() => setFieldTouched(name)}
           error={hasError}
           {...otherProps}
