--- a/generators/app/templates/app/shared/components/form/jhi-form.js.ejs
+++ b/generators/app/templates/app/shared/components/form/jhi-form.js.ejs
@@ -2,13 +2,24 @@ import React from 'react';
 import { Formik } from 'formik';
 
 export default React.forwardRef((props, ref) => {
-  const { children, initialValues, onSubmit = (d) => console.log(d), validationSchema = {} } = props;
+  const { children, initialValues = {}, onSubmit = (d) => console.log(d), validationSchema = {} } = props;
 
-  // checks to ensure that the validationSchema does not contain validation for non-existent fields, causing submit to fail
+  // get list of field names
   const fields = children.filter((c) => c && c.props && c.props.name).map((c) => c.props.name);
-  const missingValidatedFields = Object.keys(validationSchema.fields).filter((f) => !fields.includes(f));
-  if (missingValidatedFields.length) {
-    console.warn(`Validating field(s) '${missingValidatedFields.join(', ')}', but no Input is present in the form. It will fail to submit`);
+  // ensure an initial value is provided for each field
+  fields.forEach((f) => {
+    if (!initialValues[f]) {
+      initialValues[f] = '';
+    }
+  });
+  // ensure that the validationSchema does not contain validation for non-existent fields, causing submit to fail
+  if (validationSchema && validationSchema.fields) {
+    const missingValidatedFields = Object.keys(validationSchema.fields).filter((f) => !fields.includes(f));
+    if (missingValidatedFields.length) {
+      console.warn(
+        `Validating field(s) '${missingValidatedFields.join(', ')}', but no Input is present in the form. It will fail to submit`,
+      );
+    }
   }
 
   return (
