--- a/generators/entity/templates/entity-detail-screen-style.js.ejs
+++ b/generators/entity/templates/entity-detail-screen-style.js.ejs
@@ -7,5 +7,17 @@ export default StyleSheet.create({
   container: {
     flex: 1,
     padding: 20
-  }
+  },
+  label: {
+    fontWeight: 'bold'
+  },
+  <%_ if (entityContainsImageBlob) { _%>
+  imageBlob: {
+    width: 100,
+    height: 50,
+    resizeMode:'contain',
+    borderWidth: 1,
+    borderColor: 'lightgrey'
+  },
+  <%_ } _%>
 })
